ingress/traefik.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  labels:
    app: traefik
spec:
  rules:
  - host: "traefik-ctf.lskysd.ca"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: traefik-dashboard
              port:
                number: 80
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.4
          volumeMounts:
            - mountPath: /secrets
              name: traefik-ssl
            - mountPath: /dynconf
              name: traefik-dynconf
          ports:
            - name: web
              containerPort: 80
              hostPort: 80
            - name: https
              containerPort: 443
              hostPort: 443
            - name: dashboard
              containerPort: 8080
      volumes:
        - name: traefik-ssl
          secret:
            secretName: traefik-secrets
        - name: traefik-dynconf
          configMap:
            name: traefik-dynconfig

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
spec:
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 8080
